--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,16 @@ body {
   height: 500px;
 }
 
+.text-right {
+  width: 90%;
+  padding: 30px 0 0 0;
+}
+
+.acessibilidade {
+  color: blue;
+  cursor: pointer;
+}
+
 .d-flex {
   height: 100%;
 }
@@ -20,12 +30,12 @@ body {
 }
 
 h1 {
-  margin-bottom: 15px;
+  margin-bottom: 50px;
   font-size: 50px;
 }
 
 p {
-  font-size: 16px;
+  font-size: 12px;
   width: 650px;
 }
 
@@ -35,4 +45,8 @@ form {
 
 button {
   margin-top: 15px;
+}
+
+.executar {
+  border-radius: 10px;
 }
